# BaseLibrary

./: CMakeLists.txt  README.md
cmake/: BaseLibraryConfig.cmake  BaseLibraryTagets-debug.cmake  BaseLibraryTagets.cmake
config/: BaseLibraryConfig.cmake.in
src/: CMakeLists.txt
src/include/: BaseDefine.h  BaseInclude.h  Logger.h  LoggerImp.h  Util.h
src/logger/: LoggerImp.cpp
src/util/: Util.cpp
test/: CMakeLists.txt
test/loggerTest/: CMakeLists.txt  LogTest.cpp
